[package]
name = "hmac-sha"
version = "0.3.0"
edition = "2018"
authors = ["Philip Woolford <woolford.philip@gmail.com>", "Leonardo Razovic <lrazovic@gmail.com>"]
keywords = ["crypto", "sha", "hmac", "digest"]
description = "Minimal implementation of HMAC-SHA-{1,2,3} in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lrazovic/rust-hmac-sha"
include = ["**/*.rs", "LICENSE"]
categories = ["cryptography", "no-std"]

[lib]
name = "hmacsha"
path = "src/lib.rs"

[dependencies]
hmac = "0.11"

[dev-dependencies]
hex = "0.4"
criterion = "0.3"
sha-1 = "0.9"
sha2 = "0.9"
sha3 = "0.9"

[[bench]]
name = "sha1_bench"
harness = false
